cbor4dns: add lessons learned on dnspython

--- a/IETF117-cbor4dns.html
+++ b/IETF117-cbor4dns.html
@@ -85,6 +85,9 @@ Almost done:
  - Issues with existing draft:
     - Section elision may need rethinking
     - Dedicated specs for pseudo-RRs (e.g. OPT) may be needed
+ - `dnspython`
+    - Generate DNS message parts (not full messages) is tricky
+    - PR required to make private functionality (partially) public
         
 <div class="my-footer"><p>IETF Hackathon - `cbor4dns` </p></div>      
 ---
